-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 10.0.1
-
None
-
c8f29b9e0 (11.0)
C++17 If statement with initializer support get's highlighted as invalid code and prevents auto completion.
if (auto myObj = getObject(); myObj->isFoo()) { ... }
| For Gerrit Dashboard: QTCREATORBUG-29182 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 479712,3 | CppEditor: Add support for init statements in if conditions | 11.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |